# labs

./: .gitignore  pyproject.toml
postgresql/: init-db.sh  postgresql.docker-compose.yml  postgresql_dataload.ipynb  postgresql_infra.ipynb  wip_postgresql_datagen.ipynb
postgresql/homeworks/homework_01/: homework_01.ipynb
postgresql/schemas/aerolinea/: aerolinea_db.sql
postgresql/schemas/amazon/: amazon_esquema_datos.sql
postgresql/schemas/banco/: banco_db.sql
