[project]
name = "relational-databases"
version = "0.1.0"
description = "relational-databases"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=39.0.0",
    "faker-commerce>=1.0.4",
    "ipykernel>=7.1.0",
    "ipython-sql>=0.5.0",
    "ipywidgets>=8.1.8",
    "jupyter-tabnine>=1.2.3",
    "jupyterlab>=4.5.1",
    "mimesis>=18.0.0",
    "nbgrader>=0.9.5",
    "pandas>=2.3.3",
    "prettytable==3.7.0",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic>=1.10.26",
    "pywinpty>=3.0.2",
    "sqlalchemy>=1.4.54",
    "sqlmodel>=0.0.11",
]
